--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,12 +8,13 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  dargon2_flutter: ^3.3.0
   flutter:
     sdk: flutter
+  flutter_secure_storage: ^9.0.0
+  http: ^1.2.1
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
   flutter_lints: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
